Adding Sidebar again.

--- a/index.html
+++ b/index.html
@@ -167,6 +167,13 @@ function (doc, meta) {
 {% endcapture %}
 
 {% capture related_resources %}
+
+### Announcements
+
+* [1.0 RC1](http://spring.io/blog/2014/02/06/spring-data-couchbase-1-0-rc1-released)
+* [1.0 M2](http://spring.io/blog/2013/11/18/spring-data-couchbase-1-0-m2-released)
+* [1.0 M1](http://spring.io/blog/2013/09/12/spring-data-couchbase-1-0-m1-and-spring-data-solr-1-0-ga-released)
+
 {% endcapture %}
 
 {% include project_page.html %}
