Add note on favoring the BOM

--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@ access layer.
 
 ## Quick Start
 
+*Note that you should usually rely on the BOM, as described in [the Spring Data generic quick start](http://projects.spring.io/spring-data/#quick-start), especially when using Spring Boot.*
+
 {% include download_widget.md %}
 
 ## Configuration
